Nikhil's updates V4 - catching exceptions for data access